--- a/src/index.css
+++ b/src/index.css
@@ -77,3 +77,87 @@
 .serie-container:hover .serie-image {
   opacity: 0.5;
 }
+
+.flex {
+  display: flex;
+  align-items: center;
+}
+
+.flex-grow {
+  flex-grow: 1;
+}
+
+.ml-0 {
+  margin-left: 0;
+}
+
+.mr-0 {
+  margin-right: 0;
+}
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
+}
+
+.card {
+  padding: 2em;
+}
+
+.read-the-docs {
+  color: #888;
+}
+
+nav{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  height: 5rem;
+  background-color: rgba(255, 0, 4, 0.385);
+  position: sticky;
+  top: 2rem;
+  z-index: 999;
+  margin-bottom: 5rem;
+}
+
+.violet-bg{
+  background-color: rgba(255, 0, 4, 0.385);
+
+}
+@media only screen and (max-width: 768px) {
+  .flex-grow {
+    flex-grow: 0;
+  }
+  .ml-0, .mr-0 {
+    margin: 10px; 
+  }
+  .links {
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+}
+
+
